lox-tests/tests/for/fun_in_body.stderr
ERROR: at 'fun': Expected expression, got Fun
 --> 2:10
  |
2 | for (;;) fun foo() {}
  |          ^-^
